--- a/smpleIO.vcxproj.filters
+++ b/smpleIO.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="smpleIO.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
